@@ -12,6 +12,7 @@ mainClassName = 'org.mrcube.MR3'
 sourceCompatibility = targetCompatibility = '11'
 
 project.ext {
+    moduleName = 'org.mrcube.mrcube'
     artifactId = 'mrcube'
     defaultEncoding = 'UTF-8'
 }
@@ -30,9 +31,39 @@ wrapper {
     gradleVersion = '5.0'
 }
 
-idea{
-    module{
-        inheritOutputDirs = false
+jar {
+    inputs.property("moduleName", moduleName)
+    manifest {
+        attributes('Automatic-Module-Name': moduleName)
+    }
+}
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'junit',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
+}
+
+idea {
+    module {
+        inheritOutputDirs = true
         outputDir = compileJava.destinationDir
         testOutputDir = compileTestJava.destinationDir
     }
@@ -40,11 +71,15 @@ idea{
 
 test {
     useJUnitPlatform()
-}
-
-jar {
-    into('org/mrcube/resources') {
-        from 'src/main/java/org/mrcube/resources'
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+        ]
+        classpath = files()
     }
 }
 
@@ -57,7 +92,6 @@ shadowJar {
 
 jlink {
     mergedModule {
-        requires 'java.desktop'
     }
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
@@ -70,7 +104,7 @@ dependencies {
     compile 'org.apache.jena:jena-core:3.9.0'
     compile 'net.infonode:idw:1.6.1_gpl'
     compile 'say.swing:jfontchooser:1.0.5'
-    compile 'org.slf4j:slf4j-log4j12:1.7.25'
+//    compile 'org.slf4j:slf4j-log4j12:1.7.25'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
 }
